upgrade new control syntax flow

--- a/src/app/modules/webcam/webcam/webcam.component.html
+++ b/src/app/modules/webcam/webcam/webcam.component.html
@@ -1,5 +1,7 @@
 <div class="webcam-wrapper" (click)="imageClick.next();">
   <video #video [width]="videoWidth" [height]="videoHeight" [class]="videoStyleClasses" autoplay muted playsinline (resize)="videoResize()"></video>
-  <div class="camera-switch" *ngIf="allowCameraSwitch && availableVideoInputs.length > 1 && videoInitialized" (click)="rotateVideoInput(true)"></div>
+  @if (allowCameraSwitch && availableVideoInputs.length > 1 && videoInitialized) {
+    <div class="camera-switch" (click)="rotateVideoInput(true)"></div>
+  }
   <canvas #canvas [width]="width" [height]="height"></canvas>
 </div>
