--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,44 +4,52 @@
   </h1>
 
   <div>
-    <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
-            [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-            [videoOptions]="videoOptions"
-            [imageQuality]="1"
-            (cameraSwitched)="cameraWasSwitched($event)"
-            (initError)="handleInitError($event)"
-    ></webcam>
+    @if (showWebcam) {
+      <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
+        [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
+        [videoOptions]="videoOptions"
+        [imageQuality]="1"
+        (cameraSwitched)="cameraWasSwitched($event)"
+        (initError)="handleInitError($event)"
+      ></webcam>
+    }
     <br>
-    <button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
-    <button class="actionBtn" (click)="toggleWebcam();">Toggle Webcam</button>
-    <br>
-    <button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button>
-    <input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch"><label for="cameraSwitchCheckbox">Allow Camera Switch</label>
-    <br>
-    DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">
-    <button (click)="showNextWebcam(deviceId);">Activate</button>
-    <br>
-    Preferred facing mode:
-    <input type="radio" value="user" name="facingMode" [(ngModel)]="facingMode"> User
-    <input type="radio" value="environment" name="facingMode" [(ngModel)]="facingMode"> Environment
-    <input type="radio" value="" name="facingMode" [(ngModel)]="facingMode"> No preference
-  </div>
-</div>
+      <button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
+      <button class="actionBtn" (click)="toggleWebcam();">Toggle Webcam</button>
+      <br>
+        <button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button>
+        <input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch"><label for="cameraSwitchCheckbox">Allow Camera Switch</label>
+        <br>
+          DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">
+          <button (click)="showNextWebcam(deviceId);">Activate</button>
+          <br>
+            Preferred facing mode:
+            <input type="radio" value="user" name="facingMode" [(ngModel)]="facingMode"> User
+            <input type="radio" value="environment" name="facingMode" [(ngModel)]="facingMode"> Environment
+            <input type="radio" value="" name="facingMode" [(ngModel)]="facingMode"> No preference
+          </div>
+        </div>
 
-<div class="snapshot" *ngIf="webcamImage">
-  <h2>Nice one!</h2>
-  <img [src]="webcamImage.imageAsDataUrl" alt="webcam image">
-</div>
+        @if (webcamImage) {
+          <div class="snapshot">
+            <h2>Nice one!</h2>
+            <img [src]="webcamImage.imageAsDataUrl" alt="webcam image">
+          </div>
+        }
 
-<h4 *ngIf="messages.length > 0">Messages:</h4>
-<ul *ngFor="let msg of messages">
-  <li>{{msg | json}}</li>
-</ul>
+        @if (messages.length > 0) {
+          <h4>Messages:</h4>
+        }
+        @for (msg of messages; track msg) {
+          <ul>
+            <li>{{msg | json}}</li>
+          </ul>
+        }
 
-<h2>Like this project on GitHub:</h2>
-<ul class="links">
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/basst314/ngx-webcam">ngx-webcam / GitHub</a></h2>
-  </li>
-</ul>
+        <h2>Like this project on GitHub:</h2>
+        <ul class="links">
+          <li>
+            <h2><a target="_blank" rel="noopener" href="https://github.com/basst314/ngx-webcam">ngx-webcam / GitHub</a></h2>
+          </li>
+        </ul>
 
