--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
               (imageCapture)="handleImage($event)"
               [allowCameraSwitch]="allowCameraSwitch"
               [switchCamera]="nextWebcamObservable"
-              [mirrorImage]="WebcamMirrorProperties.AUTO"
+              [mirrorImage]="WebcamMirrorProperties.ALWAYS"
               [videoOptions]="videoOptions"
               [imageQuality]="1"
               (cameraSwitched)="cameraWasSwitched($event)"
