--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,18 @@
 
   <div>
     @if (showWebcam) {
-      <webcam [height]="500"
-              [width]="500"
-              [trigger]="triggerObservable"
-              (imageCapture)="handleImage($event)"
-              [allowCameraSwitch]="allowCameraSwitch"
-              [switchCamera]="nextWebcamObservable"
-              [mirrorImage]="WebcamMirrorProperties.ALWAYS"
-              [videoOptions]="videoOptions"
-              [imageQuality]="1"
-              (cameraSwitched)="cameraWasSwitched($event)"
-              (initError)="handleInitError($event)"/>
+      <ngx-webcam [height]="500"
+                  [width]="500"
+                  [trigger]="triggerObservable"
+                  (imageCapture)="handleImage($event)"
+                  [allowCameraSwitch]="allowCameraSwitch"
+                  [switchCamera]="nextWebcamObservable"
+                  [mirrorImage]="WebcamMirrorProperties.ALWAYS"
+                  [videoOptions]="videoOptions"
+                  [imageType]="IMAGE_TYPE.JPEG"
+                  [imageQuality]="1"
+                  (cameraSwitched)="cameraWasSwitched($event)"
+                  (initError)="handleInitError($event)"/>
     }
     <br>
     <button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
