change test execution with jest

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div style="text-align:center">
-  <h1>
-    ngx-webcam Demo
-  </h1>
+  <h1>ngx-webcam Demo</h1>
 
   <div>
     @if (showWebcam) {
